--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 
-
+/*
+This CSS governs the appearance of our site.
+You can find the basic concepts of CSS here: https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/How_CSS_works
+*/
 
 /*
 This makes the border and padding be counted as part of the element's size.
@@ -25,9 +28,6 @@ html, body, figure {
 
 /* Default font and size */
 body {
-	width: 100vw;
-	height: 100vh;
-	overflow: hidden;
 
 	/* center vertically */
 	display: flex;
@@ -41,6 +41,12 @@ body {
 	/* default text */
 	font-family: sans-serif;
 	font-size: 1.1rem;
+	color: white;
+	
+}
+
+h1, h2, h3 {
+	padding-left: 5%;
 }
 
 /*
@@ -51,41 +57,6 @@ The various units of measurement available in CSS:
 	https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Values_and_units
 */
 
-#plot {
-	width: 100%;
-	height: 100%;
-	/* margin: 1rem; */
-	border: 0px none; 
-	margin: 0px; 
-	padding: 0px; 
-	top: 0px; 
-	left: 0px; 
-	position: absolute; 
-}
-
-#debug-overlay {
-	top: 1rem; 
-	left: 1rem; 
-	position: absolute; 
-	z-index: 2;
-
-	/* padding: 0 0.5rem 0 0.5rem; */
-	border-radius: 0.5rem;
-	background: rgba(0, 0, 0, 0.5);
-	color: white;
-
-	overflow: hidden;
-}
-
-#debug-overlay a {
-	color: rgb(118, 255, 152);
-}
-#debug-overlay p {
-	margin: 0.5rem;
-}
-#debug-overlay pre {
-	font-size: 0.8em;
-}
 
 .button {
 	display: inline;
@@ -96,6 +67,18 @@ The various units of measurement available in CSS:
 
 	border: white 1px solid;
 	border-radius: 0.5rem;
+}
+
+.Nbutton {
+	display: inline;
+	padding-left: 1.1rem;
+	padding-right: 1.1rem;
+	margin-left: 0.25rem;
+	margin-right: 0.25rem;
+
+	border: white 1px solid;
+	border-radius: 1rem;
+	background-color: #666666;
 }
 
 .keyboard {
@@ -138,13 +121,19 @@ The various units of measurement available in CSS:
   appearance: none;
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  background: #4CAF50; /* Green background */
+  background: #006bce; /* Green background */
   cursor: pointer; /* Cursor on hover */
 }
 
 .slider::-moz-range-thumb {
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  background: #4CAF50; /* Green background */
+  background: #006bce; /* Green background */
   cursor: pointer; /* Cursor on hover */
+}
+
+/* Red border */
+hr.new1 {
+  border-top: 3px solid #006bce;
+  width: 50%
 }
